<resources>
    <string name="app_name">PMA</string>
    <string name="title_activity_menu" translatable="false">MenuActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="facebook_app_id" translatable="false">2143425665884039</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2143425665884039</string>


    <string name="Login">Log in using email</string>
    <string name="Register">Register</string>


    <string name="skiplogin">Skip login, shop now! ></string>
    <string name="welcome">Welcome to the Store.</string>
    <string name="welcomepromotion">The New OnePlus 5.\nDual Camera, Clearer Photos.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">"This password is not secure enough "</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="logintitle">Log in</string>
    <string name="action_forgot">Forgot your password?</string>
    <string name="logging_in">Just a sec. Logging you in...</string>

    <string name="registertitle">Register a new account</string>
    <string name="prompt_verifypassword">Verify password</string>
    <string name="action_register">Register</string>
    <string name="action_skipregistration">Skip registration</string>

    <string name="date">Birthday</string>
    <string name="registering">Hang tight. We\'re creating your account...</string>

    <string name="accountexists">Account already exists. Please log in.</string>
    <string name="error_passwordnotsame">Passwords do not match</string>

    <string name="forgotpasswordtitle">Account Recovery</string>
    <string name="action_pwreset">Reset your password</string>
    <string name="pwsending">Hold on. We\'re sending your password reset link to your email...</string>
    <string name="error_incorrect_bday">Birthday is incorrect</string>

    <string name="pwsent">Yay! Your password has been sent.</string>

    <string name="profiletitle">My profile</string>
    <string name="highlightstitle">Highlights</string>
    <string name="catalogtitle">Product catalog</string>
    <string name="myorderstitle">My orders</string>

    <string name="changephoto">Change your profile photo</string>
    <string name="accountsettings">Account Settings</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="action_changepw">Change password</string>
    <string name="pleasewait">Please wait.</string>
    <string name="changingpw">We\'re changing your password...</string>
    <string name="sorry">We\'re sorry!</string>
    <string name="facebookchangepw">We can\'t manage your Facebook account for you. Please click on the Facebook icon above to change your password with Facebook.</string>

    <string name="changepwdonetitle">Done!</string>
    <string name="changepwdonebody">We changed your password. Please make sure you log in with your new password next time.</string>

    <string name="notifications">Notifications</string>
    <string name="pushnotifsummary">Enable push notifications to receive the latest deals from us</string>
    <string name="sound">Sound</string>
    <string name="title_activity_setting">Settings</string>
    <string name="vibrate">Vibrate</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="qtynum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="cart">Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="qty">Qty:</string>
    <string name="notconnected">You\'re not connected to the Internet.</string>
    <string name="changeqty">Change quantity</string>
    <string name="delete">Delete</string>

    <string name="areyousure">Are you sure you want to delete&#160;</string>
    <string name="yesdelete">Yes, delete</string>
    <string name="nokeepit">No, keep it</string>

    <string name="items">items</string>
    <string name="totaltext">Your total</string>

    <string name="addsomethingtocart">Your shopping cart is empty.\nWhy don\'t you add something to it?</string>

    <string name="checkout">Checkout</string>

    <string name="hotsale">Hot sale</string>
    <string name="highestrated">Highest rated</string>
    <string name="topcategories">Top categories</string>

    <string name="addedtocart">added to cart.</string>
    <string name="viewcart">VIEW CART</string>
    <string name="deleted">deleted.</string>
    <string name="undo">UNDO</string>
    <string name="addpaymentmethod">Add payment method</string>
    <string name="ordersummary">Order summary</string>

    <string name="prompt_line1">House No., Soi, Road</string>
    <string name="prompt_line2">Sub-district, District</string>
    <string name="prompt_changwat">Province</string>
    <string name="prompt_zipcode">Zip code</string>

    <string name="paynow">Pay now</string>
    <string name="paymentcompleted">Payment completed</string>
    <string name="paymentcompleteddetail">Your order has been processed. A confirmation email will be sent to you soon. Thanks for shopping with us!</string>

    <string name="continueshopping">Continue shopping</string>
    <string name="shippingaddress">Shipping address</string>
    <string name="payment">Payment</string>

    <string name="productinfo">Product information</string>
    <string name="freeshipping">Free shipping</string>
</resources>
